--- a/style.css
+++ b/style.css
@@ -162,6 +162,13 @@ width: 390px;
     flex-direction: row;
     justify-content: space-around;
 }
+.curriculum{
+    background-image: url("/img/bg.png");
+    background-position: center;
+    height:  fit-content;
+    padding: 50PX;
+    margin: 50px 0;
+}
 
 
 
