card and footer added

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
- padding: 0 50px;
+    padding: 20px 5vh;
  
 }
 nav img{
@@ -29,6 +29,7 @@ display: flex;
 align-items: center;
     text-transform: uppercase;
     margin-left: 10px;
+
 }
 .menu{
     display: flex;
@@ -87,7 +88,12 @@ align-items: center;
     width: 100%;
     height: 100%;
 }
+.banner1{
+ 
+    text-wrap: wrap;
+}
 .b1{
+    
     font-size: 56px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -147,6 +153,26 @@ width: 390px;
     padding-top: 20px;
   
 }
+.c33{
+    background-image: linear-gradient(#FFF4DC, #FFFFFF);
+    width:  390px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    padding-top: 20px;
+  
+}
+.c333{
+    background-image: linear-gradient(#EEE1FF, #FFFFFF);
+    width:  390px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    padding-top: 20px;
+  
+}
 .c4{
     font-size: 15px;
     margin-top: 20px;
@@ -157,9 +183,21 @@ width: 390px;
     font-size: 15px;
     font-weight: bold;
 }
+.c55{
+    color: rgba(240, 170, 0, 1);
+    font-size: 15px;
+    font-weight: bold;
+}
+.c555{
+    color: rgba(135, 0, 255, 1) ;
+    font-size: 15px;
+    font-weight: bold;
+}
+
 .c{
     display: flex;
     flex-direction: row;
+    gap: 20;
     justify-content: space-around;
 }
 .curriculum{
@@ -169,8 +207,172 @@ width: 390px;
     padding: 50PX;
     margin: 50px 0;
 }
+/* 2btn */
+.btn2{
+display: flex;
+gap: 10px;
+justify-content: center;
+}
 
+/* Our Stories */
+.stories
+{
+    height: 1440px;
+    background-image: linear-gradient( #FFFFFF,#fea1015b);
+ 
+}
+.stories1
+{
+    background-image: url("/img/bg.png");
+    background-size: cover;
+}
+.date{
+    background-color: rgba(60, 216, 232, 1);
+    color: white;
+    border-radius: 48px;
+    height: 47px;
+    width: 174px;
+    text-align: center;
+  padding: 12px 5px;
+  position: relative;
+  top: -30px;
+margin-left: 50px;
+}
+.box1{
+height: fit-content;
+width: fit-content;
+background-color: white;
+border-radius: 16px;
+}
+.box2{
 
+width: fit-content;
+background-color: white;
+border-radius: 16px;
+height: fit-content;
+}
+.box3{
+    height: fit-content;
+width: fit-content;
+background-color: white;
+border-radius: 16px;
+}
+.box4{
+    height: fit-content;
+width: fit-content;
+background-color: white;
+border-radius: 16px;
+}
+.box5{
+    height: fit-content;
+width: fit-content;
+background-color: white;
+border-radius: 16px;
+}
+
+.k{
+    padding: 20px;
+}
+
+.box1 > img{
+ 
+    border-radius:  16px 16px 0px 0px;
+}
+.box2 > img{
+
+    border-radius:  16px 16px 0px 0px;
+}
+.box3 > img{
+ 
+    border-radius:  16px 16px 0px 0px;
+}
+.box4 > img{
+   
+    border-radius:  16px 16px 0px 0px;
+}
+.box5 > img{
+ 
+    border-radius:  16px 16px 0px 0px;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.box1{
+    grid-row: span 5;
+    height: 900px;
+
+}
+.bnn{text-align: center;}
+.bn2{
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 12px;
+    height: 50px;
+width: 197px;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+/* footer */
+.footer{
+    background-color: rgba(1, 172, 253, 1);
+    color: white;
+    padding: 50px 0;
+  
+}
+.fff{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+}
+.footer1{
+display: flex;
+gap: 5px;
+align-items: center;
+justify-content: start;
+text-align: start;
+
+}
+
+.footer1 > h1{
+    font-size: 42px;
+    font-weight: bold;
+    color: white;
+   
+}
+.footer1 > img{
+  width: 100px;
+    height: 100px;
+
+}
+.fp{
+    font-size: 20px;
+    font-weight: normal;
+    margin: 20px 0;
+   
+}
+.footer0{
+    display: flex;
+    flex-direction: column;
+    align-items:start;
+}
+.footer2{
+    display: flex;
+flex-direction: column;
+gap: 20px;
+}
+.footer2 > h1{
+    font-size: 24px;
+    font-weight: bold;
+}
+.footer2 > p{
+    font-size: 20px;
+    font-weight: normal;
+}
 
 
 
@@ -207,9 +409,18 @@ width: 390px;
     .p1{
         text-wrap: wrap;
     }
+    .c{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+    .btn2{
+        display: none;
+    }
 }
 /* ---------- */
 
-/* banner */
 
 
