--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /*---- */
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,53 +11,62 @@
 }
 
 /* nav */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 5vh;
- 
+
 }
-nav img{
+
+nav img {
     width: 62px;
     height: 62px;
 }
-.logo{
+
+.logo {
     font-size: 20px;
     font-weight: 600;
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
     text-transform: uppercase;
     margin-left: 10px;
 
 }
-.menu{
+
+.menu {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     font-size: 20px;
-    font-weight: normal ;
+    font-weight: normal;
 }
-.a{
+
+.a {
     font-size: 32px;
     font-weight: bold;
     margin-left: 5px;
 
 }
-.a1{
+
+.a1 {
     color: rgba(254, 163, 1, 1);
 }
-.a2{
+
+.a2 {
     color: rgba(1, 172, 253, 1);
 }
-.a3{
-    color:rgba(5, 212, 223, 1) ;
+
+.a3 {
+    color: rgba(5, 212, 223, 1);
 }
-.a4{
+
+.a4 {
     color: rgba(93, 88, 239, 1);
 }
-.btn{
+
+.btn {
     background-color: rgba(254, 163, 1, 1);
     color: white;
     padding: 10px 20px;
@@ -68,7 +77,8 @@ align-items: center;
     font-size: 20px;
     font-weight: bold;
 }
-.menu1{
+
+.menu1 {
     display: none;
 }
 
@@ -77,40 +87,48 @@ align-items: center;
 
 
 /* banner */
-.banner{
+.banner {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0 50px;
     margin-top: 50px;
 }
-.banner img{
+
+.banner img {
     width: 100%;
     height: 100%;
 }
-.banner1{
- 
+
+.banner1 {
+
     text-wrap: wrap;
 }
-.b1{
-    
+
+.b1 {
+
     font-size: 56px;
     font-weight: bold;
     margin-bottom: 20px;
-  
+
 }
-.b2{
+
+.b2 {
     color: rgba(254, 163, 1, 1);
 }
-.b3{
-color: rgba(1, 172, 253, 1);
+
+.b3 {
+    color: rgba(1, 172, 253, 1);
 }
-.p1{
+
+.p1 {
     font-size: 20px;
     font-weight: normal;
     margin-bottom: 20px;
+    color: black;
 }
-.btn1{
+
+.btn1 {
     background-color: black;
     color: white;
     padding: 10px 20px;
@@ -121,21 +139,22 @@ color: rgba(1, 172, 253, 1);
     font-size: 20px;
     font-weight: bold;
 }
+
 /*Standard Curriculum */
-.c1{
+.c1 {
     text-align: center;
     font-size: 46px;
     font-weight: bold;
     margin-top: 50px;
 }
 
-.c2{
+.c2 {
     display: flex;
     flex-direction: column;
-   
-   align-items: center;
-height: 476px;
-width: 390px;
+    background-image: linear-gradient(#DEF5FF, #FFFFFF, #FFFFFF);
+    align-items: center;
+    height: 476px;
+    width: fit-content;
     padding: 0 50px;
     margin-top: 50px;
     text-align: center;
@@ -143,235 +162,319 @@ width: 390px;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
     border-radius: 18px;
 }
-.c3{
-    background-image: linear-gradient(#DEF5FF, #FFFFFF);
-    width:  390px;
+.c02 {
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(#FFF4DC, #FFFFFF, #FFFFFF);
+    align-items: center;
+    height: 476px;
+    width: fit-content;
+    padding: 0 50px;
+    margin-top: 50px;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+}
+.c022 {
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(#E9D8FF, #FFFFFF, #FFFFFF);
+    align-items: center;
+    height: 476px;
+    width: fit-content;
+    padding: 0 50px;
+    margin-top: 50px;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+}
+
+.c3 {
+
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 18px;
     padding-top: 20px;
-  
+
 }
-.c33{
-    background-image: linear-gradient(#FFF4DC, #FFFFFF);
-    width:  390px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 18px;
-    padding-top: 20px;
-  
-}
-.c333{
-    background-image: linear-gradient(#EEE1FF, #FFFFFF);
-    width:  390px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 18px;
-    padding-top: 20px;
-  
-}
-.c4{
+
+/*  */
+.c4 {
     font-size: 15px;
     margin-top: 20px;
 
 }
-.c5{
+
+.c5 {
     color: rgba(100, 200, 255, 1);
     font-size: 15px;
     font-weight: bold;
 }
-.c55{
+
+.c55 {
     color: rgba(240, 170, 0, 1);
     font-size: 15px;
     font-weight: bold;
 }
-.c555{
-    color: rgba(135, 0, 255, 1) ;
+
+.c555 {
+    color: rgba(135, 0, 255, 1);
     font-size: 15px;
     font-weight: bold;
 }
 
-.c{
+.c {
     display: flex;
     flex-direction: row;
-    gap: 20;
+    gap: 50px;
     justify-content: space-around;
 }
-.curriculum{
+
+.curriculum {
     background-image: url("/img/bg.png");
     background-position: center;
-    height:  fit-content;
+    height: fit-content;
     padding: 50PX;
     margin: 50px 0;
 }
+
 /* 2btn */
-.btn2{
-display: flex;
-gap: 10px;
-justify-content: center;
+.btn2 {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
 }
 
 /* Our Stories */
-.stories
-{
-    height: 1440px;
-    background-image: linear-gradient( #FFFFFF,#fea1015b);
- 
-}
-.stories1
-{
+.stories {
     background-image: url("/img/bg.png");
     background-size: cover;
+
 }
-.date{
-    background-color: rgba(60, 216, 232, 1);
-    color: white;
-    border-radius: 48px;
-    height: 47px;
-    width: 174px;
+.stories1 {
+
+    background-image: linear-gradient(#FFFFFF, #f7b74873);
+  
+}
+.fds{
+    font-size: 46px;
+    font-weight: bold;
     text-align: center;
-  padding: 12px 5px;
-  position: relative;
-  top: -30px;
-margin-left: 50px;
-}
-.box1{
-height: fit-content;
-width: fit-content;
-background-color: white;
-border-radius: 16px;
-}
-.box2{
-
-width: fit-content;
-background-color: white;
-border-radius: 16px;
-height: fit-content;
-}
-.box3{
-    height: fit-content;
-width: fit-content;
-background-color: white;
-border-radius: 16px;
-}
-.box4{
-    height: fit-content;
-width: fit-content;
-background-color: white;
-border-radius: 16px;
-}
-.box5{
-    height: fit-content;
-width: fit-content;
-background-color: white;
-border-radius: 16px;
+    margin: 60px 0;
 }
 
-.k{
-    padding: 20px;
-}
 
-.box1 > img{
- 
-    border-radius:  16px 16px 0px 0px;
-}
-.box2 > img{
 
-    border-radius:  16px 16px 0px 0px;
-}
-.box3 > img{
- 
-    border-radius:  16px 16px 0px 0px;
-}
-.box4 > img{
-   
-    border-radius:  16px 16px 0px 0px;
-}
-.box5 > img{
- 
-    border-radius:  16px 16px 0px 0px;
-}
-.grid{
+
+
+/* story */
+
+
+
+.grid-container {
+
+    
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    grid-template-columns: repeat(4 , 1fr);
+
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
 }
-.box1{
-    grid-row: span 5;
-    height: 900px;
+
+.grid-item {
+    background: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 }
-.bnn{text-align: center;}
-.bn2{
-    background-color: black;
-    color: white;
-    padding: 10px;
-    border-radius: 12px;
-    height: 50px;
-width: 197px;
-    border: none;
+
+.grid-item.large {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.grid-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.content {
+    padding: 16px;
+}
+
+.tag {
+    position: relative;
+    top: -30px;
+    display: inline-block;
+    background-color: #58c7f5;
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 47px;
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+.tag1 {
+    position: relative;
+    top: -30px;
+    display: inline-block;
+    background-color: rgba(149, 178, 38, 1);
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 47px;
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+.tag2 {
+    position: relative;
+    top: -30px;
+    display: inline-block;
+    background-color: rgba(93, 88, 240, 1);
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 47px;
+    font-size: 12px;
+    margin-bottom: 8px;
+}
+
+h3 {
+    font-size: 18px;
+    margin: 8px 0;
+    color: #333;
+}
+
+p {
+    font-size: 14px;
+    color: #666;
+}
+
+.btnk{
     font-size: 20px;
     font-weight: bold;
+    background: #000;
+    height: 50px;
+    width: 197px;
+    border-radius: 12px;
+    color: white;
+    text-align: center;
+    margin: 20px 0;
+    padding: 10px 20px;
 }
+
+.bd{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+}
+
+/* ------------ */
+
+
+
+
+
+
+
+
 /* footer */
-.footer{
+.footer {
     background-color: rgba(1, 172, 253, 1);
     color: white;
     padding: 50px 0;
-  
+
 }
-.fff{
+
+.fff {
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 20px;
-}
-.footer1{
-display: flex;
-gap: 5px;
-align-items: center;
-justify-content: start;
-text-align: start;
 
 }
 
-.footer1 > h1{
+.footer1 {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    justify-content: start;
+    text-align: start;
+
+}
+
+.footer1>h1 {
     font-size: 42px;
     font-weight: bold;
     color: white;
-   
+
 }
-.footer1 > img{
-  width: 100px;
+
+.footer1>img {
+    width: 100px;
     height: 100px;
 
 }
-.fp{
+
+.fp {
     font-size: 20px;
     font-weight: normal;
     margin: 20px 0;
-   
+    color: white;
+
 }
-.footer0{
+
+.footer0 {
     display: flex;
     flex-direction: column;
-    align-items:start;
+    align-items: start;
 }
-.footer2{
+
+.footer2 {
     display: flex;
-flex-direction: column;
-gap: 20px;
+    flex-direction: column;
+    gap: 20px;
+    color: white;
 }
-.footer2 > h1{
+
+.footer2>h1 {
     font-size: 24px;
     font-weight: bold;
 }
-.footer2 > p{
+
+.footer2>p {
     font-size: 20px;
     font-weight: normal;
+    color: white;
+}
+
+.footer3 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.footer3>h1 {
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.footer4 {
+    display: flex;
+
+    gap: 10px;
+}
+#f{
+    display: none;
 }
 
 
@@ -381,24 +484,31 @@ gap: 20px;
 
 
 /* respnsiv */
-@media screen and (max-width: 768px){
-    nav{
-      
-        padding: 0 20px;
+@media screen and (max-width: 768px) {
+    nav {
+
+        padding: 5px 20px;
+
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
     }
-    .menu{
-     display: none;
-    }
-    .btn{
+
+    .menu {
         display: none;
     }
-    .menu1{
+
+    .btn {
+        display: none;
+    }
+
+    .menu1 {
         display: flex;
     }
-    .a{
+
+    .a {
         display: none;
     }
-    .banner{
+
+    .banner {
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
@@ -406,21 +516,66 @@ gap: 20px;
         padding: 0 20px;
         text-align: center;
     }
-    .p1{
+
+    .p1 {
         text-wrap: wrap;
     }
-    .c{
+
+    .c {
         display: flex;
         flex-direction: column;
         gap: 20px;
         justify-content: center;
         align-items: center;
     }
-    .btn2{
+
+    .btn2 {
         display: none;
     }
+
+    .fff {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: start;
+        padding: 20px;
+    }
+
+    .footer4 {
+        display: flex;
+        align-items: start;
+        justify-content: start;
+    }
+
+
+    /* story */
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+    .grid-item.large {
+        grid-column: span 1;
+        grid-row: span 1;
+    
+        
+    }
+    .bgv{
+        display: none;
+    }
+    
+
+
+
+
+    .c {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+    #f{
+        display: block
+        ;
+    }
+
 }
+
 /* ---------- */
-
-
-
